# Figure-Maker

./: .dockerignore  .env.example  .gitignore  .replit  Controlnet Z-image Workflow.json  Dockerfile  README.md  Z-Image Controlnet alt.json  docker-compose-env-example.yml  enviroment.env  pyproject.toml  replit.md  requirements.txt  workflow_template.json
.github/workflows/: deploy.yml
app/: __init__.py  config.py  main.py
app/models/: schemas.py
app/routers/: transform.py
app/services/: stable_diffusion.py  zimage.py
attached_assets/: Pasted--alwayson-scripts-API-payload-args-Comments-args-Extra-_1767852859167.txt
backend/: config.py  main.py
backend/routers/: transform.py
backend/services/: __init__.py  meshy_service.py  openai_service.py  stable_diffusion_service.py
static/: app.js  camera.html  index.html  kiosk-payment.html  kiosk-select.html  kiosk-shipping.html  kiosk-style.html  kiosk-upload.html  kiosk.css  kiosk.js  payment.html  preview.html  printing.html  shipping.html  style.html  styles.css
